fix : make pre element styling overflow:auto;

--- a/apps/nextjs/src/styles/readme.css
+++ b/apps/nextjs/src/styles/readme.css
@@ -64,4 +64,8 @@
   .task-list-item > label > input[type='checkbox'] {
     @apply hidden;
   }
+
+  pre{
+    overflow: auto;
+  }
 }
